service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: product-service
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 8999  # Port mà các service khác có thể sử dụng để giao tiếp với product-service
      targetPort: 8080  # Port mà container của product-service đang lắng nghe
  type: ClusterIP
