deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-demo-deployment
  namespace: app-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-demo
  template:
    metadata:
      labels:
        app: app-demo
    spec:
      containers:
        - name: app-demo
          image: theeb2000/product-services:v21
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-demo-service
  namespace: app-demo
spec:
  selector:
    app: app-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-demo-ingress
  namespace: app-demo
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: product.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-demo-service
                port:
                  number: 80
